--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.7",
     "framer-motion": "^10.12.18",
+    "gsap": "^3.12.2",
     "next": "13.4.7",
     "next-contentlayer": "^0.3.4",
     "postcss": "8.4.24",
