--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "cSpell.words": ["Abid", "contentlayer", "Knockabid", "Swiper"]
+  "cSpell.words": ["Abid", "contentlayer", "Knockabid", "Swiper", "Webflow's"]
 }
