blob in background

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,10 @@
 {
-  "cSpell.words": ["Abid", "contentlayer", "Knockabid", "Swiper", "Webflow's"]
+  "cSpell.words": [
+    "Abid",
+    "contentlayer",
+    "gsap",
+    "Knockabid",
+    "Swiper",
+    "Webflow's"
+  ]
 }
