--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@loglib/tracker": "^0.6.2",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@tailwindcss/typography": "^0.5.9",
     "@types/node": "20.3.3",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
-    "@uidotdev/usehooks": "^2.0.1",
+    "@uidotdev/usehooks": "^2.2.0",
     "autoprefixer": "10.4.14",
     "class-variance-authority": "^0.6.1",
     "clsx": "^1.2.1",
@@ -23,7 +24,7 @@
     "date-fns": "^2.30.0",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.7",
-    "framer-motion": "^10.12.18",
+    "framer-motion": "^10.16.1",
     "gsap": "^3.12.2",
     "next": "13.4.7",
     "next-contentlayer": "^0.3.4",
@@ -31,16 +32,16 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
-    "react-wrap-balancer": "^1.0.0",
+    "react-wrap-balancer": "^1.1.0",
     "rehype-autolink-headings": "^6.1.1",
     "rehype-pretty-code": "^0.10.0",
     "rehype-slug": "^5.1.0",
     "remark-gfm": "^3.0.1",
     "shiki": "^0.14.3",
-    "swiper": "^10.0.4",
-    "tailwind-merge": "^1.13.2",
+    "swiper": "^10.2.0",
+    "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.2",
-    "tailwindcss-animate": "^1.0.6",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "5.1.6"
   }
 }
